[workspace]
resolver = "2"
members = ["ss-tools"]

[workspace.package]
version = "0.2.3"
edition = "2021"
authors = ["akitenkrad"]
description = "Tools for Semantic Scholar API"
repository = "https://github.com/akitenkrad/rs-ss-tools.git"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.95"

[workspace.metadata.release]
tag-prefix = ""
