[package]
name = "ss-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
dotenvy = "0.15.7"
fxhash = "0.2.1"
indicatif = "0.17.9"
percent-encoding = "2.3.1"
reqwest = "0.12.9"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }

[dev-dependencies]
serial_test = "3.2.0"
